--- a/frontend/user/pages/child/addchild/addchild.wxml
+++ b/frontend/user/pages/child/addchild/addchild.wxml
@@ -76,7 +76,7 @@
   </view>
 </view> -->
 
-<view class="container_5 overall-outfit">
+<view class="container_5">
 
 <view id="button-box">
   <button class="submit" bindtap="handleSubmit">提交</button>
